--- a/_sass/components/_page.scss
+++ b/_sass/components/_page.scss
@@ -12,7 +12,7 @@
 
     h1 {
         margin-bottom: 2.5rem; // 25px
-        @include fs--heading-2;
+        @include fs--heading-1;
         color: var(--text);
     }
 
